# python-clapps

./: .gitignore  LICENSE.md  README.md  install-dev.sh  pyproject.toml  setup.cfg  setup.py
src/clapps/: Skeleton.py  __init__.py
src/clapps/output/: LogLevel.py  OutputClass.py  __init__.py  test_OutputClass.py
