# @file setup.cfg
# ===============
#
# @see [setuptools (readthedocs)](https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files)


[metadata]

name = clapps
version = attr: clapps.__version__

description = Template for small-ish Python 3 CLI apps
long_description = file: README.md, LICENSE.md

url = https://github.com/jpilkahn/python-clapps
author = Johannes Pilkahn
author_email = jpilkahn@gmail.com

keywords = boilerplate, cli, console, shell, skeleton, template, terminal

license = DBAD License 1.1
license_files = LICENSE

classifiers =
    Development Status :: 2
    Environment :: Console
    Intended Audience :: Developers
    License :: Public Domain
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Operating System :: MacOS :: MacOS X
    # Might be functional under Windows. Dunno, not my scene.
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Unix


# --------------------------------- options ---------------------------------

[options]

package_dir =
    = src
packages = find:

include_package_data = True
zip_safe = False

# - 3.4 added `pathlib`.
# - 3.6 added `unittest.TestCase.subTest`.
# --> Only tested with 3.8 for now.
python_requires = >=3.8
install_requires = setuptools>=40.8.0


# --------------------------- additional options ----------------------------

[options.package_data]
meta_markdown =
    LICENSE.md
    README.md

[options.packages.find]
where = src


# ------------------------------- entry points --------------------------------

[options.entry_points]
console_scripts =
    clapps = clapps:main


# -------------------------------- bdist_wheel --------------------------------

[bdist_wheel]
    universal = 0
